[level 2] Title: [1차] 캐시, Time: 24.46 ms, Memory: 119 MB -BaekjoonHub